--- a/config/sync/responsive_preview.device.large.yml
+++ b/config/sync/responsive_preview.device.large.yml
@@ -6,9 +6,9 @@ _core:
   default_config_hash: CQ8jj7DbJSh6FMvm1oJxMvyXoSjggU6A4rZ3hdh5inw
 id: large
 label: 'Typical desktop'
-weight: 0
+weight: -3
 orientation: landscape
 dimensions:
   width: 1366
   height: 768
-  dppx: 1
+  dppx: !!float 1
