--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -10,4 +10,6 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'use text format basic_html'
+  - 'use text format full_html'
   - 'view media'
