--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/better_exposed_filters": "^5.0",
         "drupal/block_class": "^1.0",
         "drupal/chosen": "^3.0",
+        "drupal/ckeditor_config": "^3.0",
         "drupal/coffee": "^1.0@beta",
         "drupal/colorbox": "^1.4",
         "drupal/composer_deploy": "^1.6",
