--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,7 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor: 0
+  ckeditor_config: 0
   coffee: 0
   color: 0
   config: 0
@@ -31,6 +32,8 @@ module:
   entity_embed: 0
   entity_reference_revisions: 0
   entity_type_clone: 0
+  environment_indicator: 0
+  environment_indicator_ui: 0
   features: 0
   features_ui: 0
   field: 0
@@ -70,6 +73,8 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  project_admin: 0
+  project_utilities: 0
   redirect: 0
   responsive_favicons: 0
   responsive_image: 0
