--- a/web/profiles/zaldomoh_profile/config/install/editor.editor.full_html.yml
+++ b/web/profiles/zaldomoh_profile/config/install/editor.editor.full_html.yml
@@ -50,6 +50,8 @@ settings:
       linkit_profile: default
     language:
       language_list: un
+    customconfig:
+      ckeditor_custom_config: "forcePasteAsPlainText = true\r\nautoGrow_minHeight = 200\r\nautoGrow_onStartup  =  true"
 image_upload:
   status: false
   scheme: public
