Reorder scripts; Add README files; Update zaldomoh_profile

--- a/composer.json
+++ b/composer.json
@@ -119,13 +119,13 @@
     },
     "scripts": {
         "post-drupal-scaffold-cmd": [
-            "cd web && if [ ! -f sites/default/settings.php ]; then cp sites/default/default.settings.php sites/default/settings.php && patch -p0 < ../composer-extras/patches/settings.patch; fi",
+            "cd web && if [ ! -f sites/default/settings.php ]; then cp sites/default/default.settings.php sites/default/settings.php && patch -p0 < ../scripts/composer-extras/patches/settings.patch; fi",
             "cd web && if [ ! -f sites/default/services.yml ]; then cp sites/default/default.services.yml sites/default/services.yml; fi",
-            "if [ ! -f .gitignore ]; then cp composer-extras/gitignore .gitignore; fi"
+            "if [ ! -f .gitignore ]; then cp scripts/composer-extras/custom-files/gitignore .gitignore; fi"
         ],
         "post-install-cmd": [
-            "cd web && if [ ! -f sites/default/settings.local.php ]; then cd ../ && cp composer-extras/settings.local.php web/sites/default/settings.local.php; fi",
-            "cd web && if [ ! -f sites/default/local.services.yml ]; then cd ../ && cp composer-extras/local.services.yml web/sites/default/local.services.yml; fi"
+            "cd web && if [ ! -f sites/default/settings.local.php ]; then cd ../ && cp scripts/composer-extras/custom-files/settings.local.php web/sites/default/settings.local.php; fi",
+            "cd web && if [ ! -f sites/default/local.services.yml ]; then cd ../ && cp scripts/composer-extras/custom-files/local.services.yml web/sites/default/local.services.yml; fi"
         ]
     },
     "conflict": {
