--- a/web/profiles/zaldomoh_profile/zaldomoh_profile.info.yml
+++ b/web/profiles/zaldomoh_profile/zaldomoh_profile.info.yml
@@ -1,10 +1,10 @@
-name: Custom Profile
+name: zaldomoh profile
 type: profile
-description: 'Custom Profile Package'
+description: 'custom zaldomoh profile package'
 core_version_requirement: ^8.8 | ^9.0
 
 distribution:
-  name: Custom Profile
+  name: zaldomoh profile
   langcode: en
 
 install:
