replace visually hidden with hidden

--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -17,7 +17,7 @@ content:
   field_media_video_file:
     type: file_video
     weight: 0
-    label: visually_hidden
+    label: hidden
     settings:
       muted: false
       width: 640
