--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.document.default.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.document.default.yml
@@ -12,7 +12,7 @@ bundle: document
 mode: default
 content:
   field_media_document:
-    label: visually_hidden
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: file_default
