--- a/config/sync/core.entity_view_display.media.audio.default.yml
+++ b/config/sync/core.entity_view_display.media.audio.default.yml
@@ -17,7 +17,7 @@ content:
   field_media_audio_file:
     type: file_audio
     weight: 0
-    label: visually_hidden
+    label: hidden
     settings:
       controls: true
       autoplay: false
