--- a/config/sync/core.entity_view_display.media.document.default.yml
+++ b/config/sync/core.entity_view_display.media.document.default.yml
@@ -15,7 +15,7 @@ bundle: document
 mode: default
 content:
   field_media_document:
-    label: visually_hidden
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: file_default
