--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.audio.default.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.audio.default.yml
@@ -14,7 +14,7 @@ content:
   field_media_audio_file:
     type: file_audio
     weight: 0
-    label: visually_hidden
+    label: hidden
     settings:
       controls: true
       autoplay: false
