--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.embedded.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.embedded.yml
@@ -16,7 +16,7 @@ bundle: image
 mode: embedded
 content:
   field_media_image:
-    label: visually_hidden
+    label: hidden
     settings:
       responsive_image_style: embedded
       image_link: ''
