--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.landscape_contained_4x3.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.landscape_contained_4x3.yml
@@ -16,7 +16,7 @@ bundle: image
 mode: landscape_contained_4x3
 content:
   field_media_image:
-    label: visually_hidden
+    label: hidden
     settings:
       responsive_image_style: landscape_contained_4x3
       image_link: ''
