--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.landscape_full_width_3x2.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.landscape_full_width_3x2.yml
@@ -16,7 +16,7 @@ bundle: image
 mode: landscape_full_width_3x2
 content:
   field_media_image:
-    label: visually_hidden
+    label: hidden
     settings:
       responsive_image_style: landscape_full_width_3x2
       image_link: ''
