--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.portrait_3x4.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.image.portrait_3x4.yml
@@ -16,7 +16,7 @@ bundle: image
 mode: portrait_3x4
 content:
   field_media_image:
-    label: visually_hidden
+    label: hidden
     settings:
       responsive_image_style: portrait_3x4
       image_link: ''
