--- a/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.video.default.yml
+++ b/web/profiles/zaldomoh_profile/config/install/core.entity_view_display.media.video.default.yml
@@ -14,7 +14,7 @@ content:
   field_media_video_file:
     type: file_video
     weight: 0
-    label: visually_hidden
+    label: hidden
     settings:
       muted: false
       width: 640
