--- a/web/profiles/zaldomoh_profile/config/install/field.field.media.image.field_media_image.yml
+++ b/web/profiles/zaldomoh_profile/config/install/field.field.media.image.field_media_image.yml
@@ -32,7 +32,7 @@ settings:
     title: ''
     width: null
     height: null
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: images
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   handler: 'default:file'
