--- a/config/sync/core.entity_form_display.media.document.default.yml
+++ b/config/sync/core.entity_form_display.media.document.default.yml
@@ -7,49 +7,34 @@ dependencies:
     - media.type.document
   module:
     - file
-    - path
-_core:
-  default_config_hash: iG10Nmm0YKD7r9naQgGxwcKp2vSUK85BYeFQ6NQWvto
 id: media.document.default
 targetEntityType: media
 bundle: document
 mode: default
 content:
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_media_document:
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
+    weight: 1
+    region: content
+  name:
+    type: string_textfield
     weight: 0
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 100
-    region: content
-    third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 5
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    weight: 2
     region: content
     third_party_settings: {  }
 hidden:
-  name: true
+  created: true
+  path: true
+  uid: true
